# SortSearch_lib

./: '  .gitignore  CMakeLists.txt  README.md
include/: algorithms.hpp  sort.hpp
tests/: CMakeLists.txt  main.cpp  test_main.cpp
